--- a/templates/404.ejs
+++ b/templates/404.ejs
@@ -5,16 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/public/404/404.css">
+    <link rel="stylesheet" type="text/css" href="/public/main.css">
 </head>
 
-<body>
-	<center>
-        <div class="nfound">
-            <h2>You looked for something.</h2>
-            <p>It's certainly not here.</p>
-            <img src="/public/404/4041.png">
-            <h2>Get back to <a href="/"><h2 style="font-family: Shadows Into Light, sans-serif">Zen Sick</h2></a></h2>
-        </div>
-	</center>
+<body class="nfound">
+            <img src="/public/img/404mob.jpg">
+            <h2><a href="/"><h2 style="font-family: Shadows Into Light, sans-serif;text-decoration: none;
+    color: #000;">Zen Sick</h2></a></h2>
 </body> 
