--- a/templates/404.ejs
+++ b/templates/404.ejs
@@ -9,7 +9,5 @@
 </head>
 
 <body class="nfound">
-            <img src="/public/img/404mob.jpg">
-            <h2><a href="/"><h2 style="font-family: Shadows Into Light, sans-serif;text-decoration: none;
-    color: #000;">Zen Sick</h2></a></h2>
+    <a href="/"><img src="/public/img/404mob.jpg"/></a>
 </body> 
