--- a/public/main.css
+++ b/public/main.css
@@ -497,7 +497,7 @@ img + strong /* former #imgcap */ {
     }
     .nfound {
         background-color: #AEAEAE;
-        background-image: url(img/404mob.jpg)!IMPORTANT;
+        background-image: url(img/404mob.jpg)!important;
         background-size: cover;
     }   
     .nfound a img {
