--- a/public/main.css
+++ b/public/main.css
@@ -28,6 +28,22 @@ body {
     text-align: center;
     font-size: 22px;
 }
+.column>div h2 {
+    text-align: center;
+    font-size: 24px;
+}
+.column>div h1 {
+    text-align: center;
+    font-size: 28px;
+}
+.column>div h4 {
+    text-align: center;
+    font-size: 20px;
+}
+.column>div h5 {
+    text-align: center;
+    font-size: 18px;
+}
 
 /* articles */
 
