--- a/templates/admin/edit_post.ejs
+++ b/templates/admin/edit_post.ejs
@@ -61,6 +61,7 @@
 			</div>
 			<div class="form-group">
 				<input class='update btn btn-default' value="Обновить превью" type="button" onclick="update();">
+				<a class="btn btn-default" href="/admin/manual" target="_blank">Помощь</a>
 				<input type="submit" value="Сохранить" form='main_form' class="btn btn-primary">
 			</div>
 			<textarea id='input' name="body" type='text' form='main_form' class="form-control"><%- post.body %></textarea>
