--- a/templates/admin/index.ejs
+++ b/templates/admin/index.ejs
@@ -55,6 +55,7 @@
 
 <center>
 	<a class="btn btn-success btn-lg" href="/admin/add">Ебашить пост!</a>
+	<a class="btn btn-default btn-lg" href="/admin/manual">Мануал по разметке</a>
 	<a class="btn btn-default btn-lg" href="/admin/user">Информация об авторе</a>
 	<a class="btn btn-default btn-lg" href="/logoff">Выход</a>
 </center>
