--- a/public/main.css
+++ b/public/main.css
@@ -110,6 +110,36 @@ body {
     max-width: 725px;
 }
 
+/* literature */
+
+.literature {
+    background: #fff;
+	width:100%;
+    font-family: PT Sans, monospace;
+    text-align: left;
+    border: white solid;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vw;
+    box-shadow: 5px 5px 5px #888888;
+}
+.literature a {
+    text-decoration: none;
+    color: #000;
+}
+.literature a:hover {
+    text-decoration: none;
+    color: #000;
+    opacity: 0.6;
+}
+
+.literature img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 725px;
+}
+
 /* images */
 
 .img {
