Fixed issue with buttons

--- a/public/main.css
+++ b/public/main.css
@@ -396,7 +396,7 @@ img + strong /* former #imgcap */ {
 #disqus_thread {
     margin:8px;
 }
-.pluso-engine {
+.pluso {
     margin-top: 4%;
     margin-left: 3%;
 }
