Authors page addition

--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -55,6 +55,7 @@
                                 <p>Выпускающий редактор - Desyu Rinsu</p>
                                 <p>Технический директор - А. Соколов</p>
                                 <p>Специальный корреспондент - И. Овсянников</p>
+                                <p>Анна Поздеева - Анна Поздеева</p>
                                 <p>Штатный фотограф - А. Будкин</p>
                                 <p>Шеф музыкального департамента - П. Дворянкин</p>
                         </div>
