Added search engine support, fixed page titles

--- a/templates/pages/hub.ejs
+++ b/templates/pages/hub.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff,width=device-width,initial-scale=1">
+    <META NAME="ROBOTS" CONTENT="NOINDEX, FOLLOW">
     <link rel="stylesheet" type="text/css" href="/public/main.css">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
@@ -20,7 +21,7 @@
 			});
 		});
 	</script>
-    <title>Zen Sick</title>
+    <title><%- hub %> - Zen Sick</title>
 </head>
 <body>
     <div class="bars">
