--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -66,6 +66,11 @@
 	
 	
     <div class="bars">
+        <div class="pages">
+            <span class="currentpage">1</span>
+            <a href="page/2" class="alterpage">2</a>
+            <a href="page/3" class="alterpage">3</a>
+        </div>
         <div class="counter">
             <!-- Yandex.Metrika informer -->
             <a href="https://metrika.yandex.ru/stat/?id=29461140&amp;from=informer"
