--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -21,6 +21,7 @@
 				});
 			});
 		</script>
+        <script language="JavaScript" src="middleware/gen_validatorv31.js" type="text/javascript"></script>
         <title>Information - Zen Sick</title>
     </head>
     <body>
@@ -65,8 +66,19 @@
                 <div id="contact">
                     <h2>Связаться с нами</h2>
                     <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку (пока ее нет, но скоро, возможно, появится).</p>
-                    <input type="email" placeholder="Your email">
-                    <input type="submit">
+                    <form method="post" name="contact_form" action="/middleware/contact-form-handler.php">
+                        Your Name:
+                        <input type="text" name="name">
+                        Email Address:
+                        <input type="text" name="email">
+                        <input type="submit" value="Submit">
+                    </form>
+                    <script language="JavaScript">
+                        var frmvalidator  = new Validator("contactform");
+                        frmvalidator.addValidation("name","req","Please provide your name");
+                        frmvalidator.addValidation("email","req","Please provide your email");
+                        frmvalidator.addValidation("email","email","Please enter a valid email address");
+                    </script>
                     <div id="email">
                         <p>Наш электронный адрес:</p>
                         <h2>zensick@yandex.ru</h2>
