Editorial office update

--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -54,13 +54,11 @@
                         <div id="aut1">
                             <div id="aut1">
                                 <p>Главный редактор - Марк Лино</p>
-                                <p>Выпускающий редактор - Desyu Rinsu</p>
+                                <p>Выпускающий редактор - А. Будкин</p>
+                                <p>Ответственный секретарь - Desyu Rinsu</p>
                                 <p>Технический директор - А. Соколов</p>
                                 <p>Специальный корреспондент - И. Овсянников</p>
                                 <p>Анна Поздеева - Анна Поздеева</p>
-                                <p>Штатный фотограф - А. Будкин</p>
-                                <p>Шеф музыкального департамента - П. Дворянкин</p>
-                        </div>
                     </div>
                 </div>
                 <div id="contact">
