--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -12,6 +12,7 @@
         <script src="/public/js/main.js"></script>
         <link rel="shortcut icon" href="/public/img/favicon1.png" type="image/png">
 		<script src="/public/js/SlickNav-master/jquery.slicknav.js"></script>
+		<script src="http://www.bitstorm.org/jquery/color-animation/jquery.animate-colors-min.js"></script>
 		<link href="/public/slicknav.css" rel="stylesheet" type="text/css">
 		<script>
 			$(function () {
@@ -21,7 +22,6 @@
 				});
 			});
 		</script>
-        <script language="JavaScript" src="middleware/gen_validatorv31.js" type="text/javascript"></script>
         <title>Information - Zen Sick</title>
     </head>
     <body>
@@ -61,30 +61,55 @@
                                 <p>Анна Поздеева - Анна Поздеева</p>
                     </div>
                 </div>
+					
                 <div id="contact">
                     <h2>Связаться с нами</h2>
                     <p>Оставьте свою электропочту, чтобы мы включили вас в свою новостную рассылку (пока ее нет, но скоро, возможно, появится).</p>
-                    <form method="post" name="contact_form" action="/middleware/contact-form-handler.php">
-                        Your Name:
-                        <input type="text" name="name">
-                        Email Address:
-                        <input type="text" name="email">
-                        <input type="submit" value="Submit">
+					
+					<script>
+						var re = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i;  /// some regexp shit
+						$(document).ready(function() {
+							$('#email_button').on('click', function() {
+								var email = $('#email').val(),
+									name = $('#name').val();
+								if(name && re.test(email)) {
+									$.ajax({
+										url: '/ajax/add_email',
+										type: 'POST',
+										data: {email: email, name: name},
+										success: function (msg) {
+											$('#email_button').animate({backgroundColor: '#006500'});
+											$('#email_button').val('Ждите писем!');
+											$('#email_button').prop('disabled', true);
+											$('#email_button').css('cursor', 'default');
+										}
+									});
+								} else {								
+									$('#email_button').animate({backgroundColor: '#ba0000'});
+									$('#email_button').val('Что-то не так!');
+								}
+							});
+						});
+					</script>
+					
+                    <form name="contact_form">
+                        <input type="text" name="name" placeholder="Как вас зовут?" id='name'>
+                        <input type="text" name="email" placeholder="Куда вам писать?" id='email'>
+                        <input type="button" value="Подписаться" id='email_button'>
                     </form>
-                    <script language="JavaScript">
-                        var frmvalidator  = new Validator("contactform");
-                        frmvalidator.addValidation("name","req","Please provide your name");
-                        frmvalidator.addValidation("email","req","Please provide your email");
-                        frmvalidator.addValidation("email","email","Please enter a valid email address");
-                    </script>
+					
                     <div id="email">
                         <p>Наш электронный адрес:</p>
                         <h2>zensick@yandex.ru</h2>
                     </div>
+					
                 </div>
             </div>
         </div>
         <div class="bars">
+			
+			
+			
             <div class="counter">
             <!-- Yandex.Metrika informer -->
             <a href="https://metrika.yandex.ru/stat/?id=29461140&amp;from=informer"
@@ -118,6 +143,9 @@ style="width:80px; height:15px; border:0;" alt="Яндекс.Метрика" tit
             <noscript><div><img src="//mc.yandex.ru/watch/29461140" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
             <!-- /Yandex.Metrika counter -->
         </div>
+			
+			
+			
         <div class="lowbar">
             <ul>
                 <li><a href="/about">About</a></li>
