--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -28,7 +28,6 @@
     <div class="bars" id='nav_bar_cnt'>
 		<div class="NavBar" id='nav_bar'>
 			<ul id="nyaa1">
-            	<li><a href="/lastissue">LAST ISSUE</a></li>
                 <li><a href="/img">ART</a></li>
                 <li><a href="/music">MUSIC</a></li>
                 <li><a href="/literature">LITERATURE</a></li>
@@ -65,11 +64,11 @@
 	
 	
     <div class="bars">
-        <div class="pages">
+        <!--<div class="pages">
             <span class="currentpage">1</span>
             <a href="page/2" class="alterpage">2</a>
             <a href="page/3" class="alterpage">3</a>
-        </div>
+        </div> -->
         <div class="counter">
             <!-- Yandex.Metrika informer -->
             <a href="https://metrika.yandex.ru/stat/?id=29461140&amp;from=informer"
