--- a/templates/404.ejs
+++ b/templates/404.ejs
@@ -9,5 +9,7 @@
 </head>
 
 <body class="nfound">
-    <a href="/"><img src="/public/img/404mob.jpg"/></a>
+    <div class="nfound1">
+        <a href="/"><img src="/public/img/404.png"/></a>
+    </div>
 </body> 
