--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -51,14 +51,13 @@
                 <div id="authors">
                     <h2>Авторы</h2>
                         <div id="aut1">
-                            <div id="aut1">
-                                <p>Главный редактор - Марк Лино</p>
-                                <p>Выпускающий редактор - А. Будкин</p>
-                                <p>Ответственный секретарь - Desyu Rinsu</p>
-                                <p>Технический директор - А. Соколов</p>
-                                <p>Специальный корреспондент - И. Овсянников</p>
-                                <p>Анна Поздеева - Анна Поздеева</p>
-                    </div>
+                                <p>Марк Лино <a href="https://twitter.com/knivesandnoises">@knivesandnoises</a></p>
+                                <p>А. Будкин <a href="https://twitter.com/Lehageltij">@Lehageltij</a></p>
+                                <p>Desyu Rinsu <a href="https://twitter.com/rinsdesyu">@rinsdesyu</a></p>
+                                <p>А. Соколов <a href="https://twitter.com/andre_sokol">@andre_sokol</a></p>
+                                <p>И. Овсянников </p>
+                                <p>Анна Поздеева <a href="https://twitter.com/traumende_">@_traumende</a></p>
+                        </div>
                 </div>
 					
                 <div id="contact">
