--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="ya-title=#2f4cd6,ya-dock=#fff,width=device-width,initial-scale=1">
+    <meta name="viewport" content="ya-dock=#fff,width=device-width,initial-scale=1">
     <meta name="description" content="Цифровое издание об искусстве, современной культуре, веб-проектах, музыке, литературе и образе жизни">
     <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
     <link rel="stylesheet" type="text/css" href="/public/main.css">
