--- a/public/main.css
+++ b/public/main.css
@@ -465,7 +465,7 @@ img + strong /* former #imgcap */ {
     border: white solid;
     box-shadow: 5px 5px 5px #888888;
     padding: 15px;
-    margin-top: 10px;
+    margin-top: 2vw;
 }
 .footerref .textmain #about {
     text-align: left;
