--- a/templates/pages/article.ejs
+++ b/templates/pages/article.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="ya-dock=#fff,width=device-width,initial-scale=1">
-        <META NAME="ROBOTS" CONTENT="INDEX, NOFOLLOW">
+        <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
         <link rel="stylesheet" type="text/css" href="/public/main.css">
         <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
