--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -51,12 +51,12 @@
                 <div id="authors">
                     <h2>Авторы</h2>
                         <div id="aut1">
-                                <p>Марк Лино <a href="https://twitter.com/knivesandnoises">@knivesandnoises</a></p>
+                                <p>Марк Лино</p>
                                 <p>А. Будкин <a href="https://twitter.com/Lehageltij">@Lehageltij</a></p>
                                 <p>Desyu Rinsu <a href="https://twitter.com/rinsdesyu">@rinsdesyu</a></p>
                                 <p>А. Соколов <a href="https://twitter.com/andre_sokol">@andre_sokol</a></p>
                                 <p>И. Овсянников </p>
-                                <p>Анна Поздеева <a href="https://twitter.com/traumende_">@_traumende</a></p>
+                                <p>Анна Поздеева</p>
                         </div>
                 </div>
 					
