--- a/public/main.css
+++ b/public/main.css
@@ -73,6 +73,13 @@ body {
     margin-left: 3vw;
     margin-right: 3vw;
 }
+.column>div img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    max-width: 100%;
+}
 .column>div hr {
     margin: 3%;
 }
@@ -180,7 +187,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    max-width: 725px; 
+    max-width: 95%; 
 }
 .img a {
     color: #000;
