--- a/templates/pages/main.ejs
+++ b/templates/pages/main.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- nyaa nyaa http://www.youtube.com/watch?v=Am12GlkJktc -->
     <meta charset="utf-8">
     <meta name="viewport" content="ya-dock=#fff,width=device-width,initial-scale=1">
     <meta name="description" content="Цифровое издание об искусстве, современной культуре, веб-проектах, музыке, литературе и образе жизни">
