--- a/templates/pages/tagsearch.ejs
+++ b/templates/pages/tagsearch.ejs
@@ -24,20 +24,16 @@
     <title>#<%- tag %> - Zen Sick</title>
 </head>
 <body>
-    <div class="bars">
-		<div class="NavBar" id="nav_bar">
-			<div id="zensick">
-            	<a href="/"><img src="/public/img/nav1.png"></a>
-			</div>
-            <ul id="nyaa">
-                <li><div id="hyperlink"><a href="/">Zen Sick</a></div></li>
+    <div class="bars" id='nav_bar_cnt'>
+		<div class="NavBar" id='nav_bar'>
+			<ul id="nyaa1">
                 <li><a href="/img">ART</a></li>
                 <li><a href="/music">MUSIC</a></li>
-				<li><a href="/literature">LITERATURE</a></li>
-            	<li><a href="/article">ARTICLES</a></li>
-        	</ul>
-    	</div>
-	</div>
+                <li><a href="/literature">LITERATURE</a></li>
+                <li><a href="/article">ARTICLES</a></li>
+			</ul>
+		</div>
+    </div>
     
 	<div class="bars" style="opacity:0; height:50px;">this must be invisible</div>
     
