--- a/templates/admin/manual.ejs
+++ b/templates/admin/manual.ejs
@@ -73,7 +73,7 @@
 <pre><code>[Это гугл](https://google.com)    
 [Куда ведет эта ссылка, можно узнать, наведя на нее курсор](https://vk.com/ "vk.com")    
 </code></pre><p>что даст</p>
-<p><a href="https://google.com">Это гугл</a><br><a href="&quot;https://vk.com/" title="vk.com">Куда ведет эта ссылка, можно узнать, наведя на нее курсор</a>    </p>
+<p><a href="https://google.com">Это гугл</a><br><a href="https://vk.com/" title="vk.com">Куда ведет эта ссылка, можно узнать, наведя на нее курсор</a>    </p>
 <h4 id="-">Цитаты</h4>
 <p>Цитаты - всегда круто, и, <em>о боже мой</em>, они здесь есть!</p>
 <pre><code>&gt; Товарищи бойцы! Наша скорбь безмерна.    
