Possible .author width fix

--- a/public/main.css
+++ b/public/main.css
@@ -574,6 +574,7 @@ img + strong /* former #imgcap */ {
 .author p {
     font-size: 14px;
     margin: 0;
+    max-width: 100%;
 }
 .author img {
     width: 3vw;
