--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -98,7 +98,7 @@
 					
                     <div id="email">
                         <p>Наш электронный адрес:</p>
-                        <h2>zensick@yandex.ru</h2>
+                        <h2>headquarters@zensick.net</h2>
                     </div>
 					
                 </div>
