--- a/templates/pages/hub.ejs
+++ b/templates/pages/hub.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="ya-dock=#fff,width=device-width,initial-scale=1">
+    <meta name="description" content="Хаб <%- hub %>">
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <link rel="stylesheet" type="text/css" href="/public/main.css">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
