--- a/templates/pages/about.ejs
+++ b/templates/pages/about.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="ya-dock=#fff,width=device-width,initial-scale=1">
-        <meta name="description" content="Про наше издание и авторов а также контакты">
+        <meta name="description" content="Про наше издание и авторов, а также контакты">
         <META NAME="ROBOTS" CONTENT="INDEX, NOFOLLOW">
         <link rel="stylesheet" type="text/css" href="/public/main.css">
         <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
